--- a/Templates/analys.html
+++ b/Templates/analys.html
@@ -23,15 +23,21 @@
             <div class="flex flex-col mb-3 gap-4">
                 <h1 class="text-2xl font-bold"> New Comments <span class="text-xs text-yellow-500">1st Semester 2024-2025</span> </h1>
             
-                <div class="flex flex-col md:flex-row items-center gap-4">
+                <div class="flex flex-col md:flex-row items-center md:items-start gap-4">
                     <!-- Search Input -->
                     <div class="flex-grow">
-                        <input type="text" placeholder="Search comments..." class="border rounded-md px-4 py-2 text-sm w-full" id="searchComments">
+                        <form method="GET" action="{{ url_for('analys') }}" class="w-full">
+                            <input type="text" name="search" placeholder="Search comments..." 
+                                class="border rounded-md px-4 py-2 text-sm w-full" 
+                                id="searchComments" value="{{ request.args.get('search', '') }}">
+                        </form>
                     </div>
+                    <!-- Button -->
                     <div class="flex-shrink-0">
-                        <button class="start p-2">Start Sentiment Process</button>
+                        <button class="start p-2  rounded-md">Start Sentiment Process</button>
                     </div>
                 </div>
+                
             </div>
             
 
@@ -47,25 +53,34 @@
                                         <th class="table-cell">Comment</th>
                                         <th class="table-cell">Faculty Name</th>
                                         <th class="table-cell hidden md:table-cell">Department</th>
-                                        <th class="table-cell hidden md:table-cell">College</th>
+                                        <th class="table-cell hidden md:table-cell">Date Created</th>
                                         <th class="table-cell hidden md:table-cell">Actions</th>
                                     </tr>
                                 </thead>
                                 <tbody class="table-body" id="commentsTableBody">
+                                    {% for comment, faculty in comments %}
                                     <tr>
-                                        <td class="table-cell">1</td>
-                                        <td class="table-cell">Great course content!</td>
-                                        <td class="table-cell">Arram T. Pamisa</td>
-                                        <td class="table-cell hidden md:table-cell">Information Technology</td>
-                                        <td class="table-cell hidden md:table-cell">CISC</td>
+                                        <td class="table-cell">{{ loop.index }}</td>
+                                        <td class="table-cell">{{ comment.content }}</td>
+                                        <td class="table-cell">{{ faculty.name }}</td>
+                                        <td class="table-cell hidden md:table-cell">{{ faculty.department }}</td>
+                                        <td class="table-cell hidden md:table-cell">{{ comment.date_added.strftime('%Y-%m-%d') }}</td>
                                         <td class="px-4 py-4 text-sm whitespace-nowrap hidden md:table-cell">
                                             <div class="flex space-x-2">
-                                                <a href="#" title="View" class="text-blue-500 hover:text-blue-700">View</a>
-                                            
+                                                <a href="{{ url_for('view_comment', comment_id=comment.comment_id) }}" title="View" class="text-blue-500 hover:text-blue-700">View</a>
+
                                             </div>
                                         </td>
                                     </tr>
+                                    {% else %}
+                                    <tr>
+                                        <td colspan="6" class="table-cell text-center">No comments found.</td>
+                                    </tr>
+                                    {% endfor %}
                                 </tbody>
+                                
+                                
+                                
                             </table>
                         </div>
                     </div>
